[tool.poetry]
name = "to-do-list-backend"
version = "1.0.0"
description = "To do list backend"
authors = ["Amelia Jochna"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
psycopg2-binary = "^2.9.6"
sqlacodegen = "^2.3.0.post1"
uvicorn = "^0.22.0"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
